sleep a bit in smoke test to ensure app is running

--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -38,4 +38,5 @@ jobs:
     - name: Basic smoke test
       run: |
         docker-compose up --build --detach
+        sleep 20
         curl --fail localhost:8000
